[project]
name = "erpai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.13.0",
    "fastapi>=0.135.3",
    "ipython>=9.12.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.6",
    "pydantic>=2.12.5",
    "uvicorn>=0.44.0",
]
